--- a/.editorconfig
+++ b/.editorconfig
@@ -1,27 +1,19 @@
 root = true
 
 [*]
-end_of_line = lf
-insert_final_newline = true
-
-[*.{js,py}]
 charset = utf-8
+end_of_line = lf
+indent_style = space
+indent_size = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.py]
-indent_style = space
 indent_size = 4
 
 [Makefile]
 indent_style = tab
 
-[lib/**.js]
-indent_style = space
-indent_size = 2
+[{DockerFile,*.yml}]
+indent_size = 4
 
-[*.yml]
-indent_style = space
-indent_size = 2
-
-[{package.json,.travis.yml}]
-indent_style = space
-indent_size = 2
