--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,8 @@ setw -g monitor-activity on
 bind-key v split-window -h -c '#{pane_current_path}'
 bind-key s split-window -v -c '#{pane_current_path}'
 
+bind-key b break-pane
+
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
