--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-#set -g default-terminal screen-256color
+#set -g default-terminal xterm
 #bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
 
 # 0 is too far from ` ;)
@@ -8,9 +8,9 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-#set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
+set -g visual-bell on
 
 setw -g mode-keys vi
 setw -g mouse on
@@ -60,12 +60,20 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+# Window titles
+set-window-option -g window-status-fg colour252
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+# Active window title
+set-window-option -g window-status-current-fg colour135
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+# Pane border
+set-option -g pane-border-fg colour234
+set-option -g pane-active-border-fg colour234
+
+# Message text
+set-option -g message-bg colour234
+set-option -g message-fg colour252
