--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,11 +13,10 @@ set -g history-limit 10000
 set -g visual-bell on
 
 setw -g mode-keys vi
-setw -g mouse on
 setw -g monitor-activity on
 
-bind-key v split-window -h -c '#{pane_current_path}'
-bind-key s split-window -v -c '#{pane_current_path}'
+bind-key v split-window -h
+bind-key s split-window -v
 
 bind-key b break-pane
 
