Change tmux prefix from C-b to C-j

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 #set -g default-terminal xterm
 #bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
 
+# change prefix key to C-j
+unbind C-b
+set -g prefix C-j
+
 # 0 is too far from ` ;)
 set -g base-index 1
 
@@ -15,8 +19,8 @@ set -g visual-bell on
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key s split-window -v -c '#{pane_current_path}'
 
 bind-key b break-pane
 
