feat(zsh): modify to keep current shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 #set -g default-terminal xterm
 #bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
 
+# to keep using current shell
+set-option -g default-shell "${SHELL}"
+set -g default-command "${SHELL}"
+
 # change prefix key to C-j
 unbind C-b
 set -g prefix C-j
