--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 #set -g default-terminal xterm
-#bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # to keep using current shell
 set-option -g default-shell "${SHELL}"
