--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,19 +70,15 @@ bind r source-file ~/.tmux.conf
 
 # THEME
 # Window titles
-set-window-option -g window-status-fg colour252
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour252,bg=default,dim
 
 # Active window title
-set-window-option -g window-status-current-fg colour135
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour135,bg=default,bright
 
 # Pane border
-set-option -g pane-border-fg colour234
-set-option -g pane-active-border-fg colour234
+set-option -g pane-border-style fg=colour234
+set-option -g pane-active-border-style fg=colour234
 
 # Message text
-set-option -g message-bg colour234
-set-option -g message-fg colour252
+set-option -g message-style fg=colour252,bg=colour234
+
