style: change text/bg color on status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,10 +70,10 @@ bind r source-file ~/.tmux.conf
 
 # THEME
 # Window titles
-set-window-option -g window-status-style fg=colour252,bg=default,dim
+set-window-option -g window-status-style fg=black,bg=default
 
 # Active window title
-set-window-option -g window-status-current-style fg=colour135,bg=default,bright
+set-window-option -g window-status-current-style fg=black,bg=blue
 
 # Pane border
 set-option -g pane-border-style fg=colour234
